Fixed semantic, float, overflow

--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
+html, body{
+  width: 100%;
+  overflow: hidden;
+}
+
+.container{
+  width: 90%;
+  margin: 0 auto;
+}
+
 .float-block{
   background:white;
   border:1px solid black;
-  width:390px;
-  height:200px;
+  width:32.33333333%;
+  height: 170px;
   float:left;
 }
